fix: list visible image (fronend)

--- a/frontend/gallery-frontend/src/app/pages/home/components/gallery/gallery.component.css
+++ b/frontend/gallery-frontend/src/app/pages/home/components/gallery/gallery.component.css
@@ -49,3 +49,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.hide-image {
+    display: none;
+}
